  (#413)
* FIXED: Unavailable kiwix-serve from the UI on Linux, if not installed (#411)
* FIXED: kiwix-serve UI for non-javascript browsers like Dillo (#587)
* FIXED: kiwix-serve crash if really long URL (#400)
* FIXED: kiwix-serve welcome page Doctype HTML line fix (for Opera)
* FIXED: Small display issue with multilingual ZIM file
* FIXED: Toolbar buttons order
* FIXED: Argument forwarding in kiwix-launcher
* FIXED: Copy to clipboard if inverted colors (#414)
* FIXED: "Select all" with inverted colors
* FIXED: Browser widget resizing sync. with the window (#382)
* FIXED: Encoding issue in kiwix-serve 404 error message
* FIXED: Abstruse index names (#84)
* FIXED: Duplicate suggestions under certain conditions
* FIXED: kiwix-serve index page for chrome/chromium
* FIXED: Buggy kiwix-serve suggestion click handling (#463)
* FIXED: Hanging page loading with specific pages on Win&Mac (#440, #376)
* FIXED: Buggy tabs with RTL disposition (#424)
* FIXED: Small bug in library filtering (by language)
* FIXED: "Illegal instruction" crash with old CPUs without SSE2 (#478)
* FIXED: Download problem with Metalink files containing magnet links
* FIXED: Allow fullscreen for videos
* FIXED: Icons for a better rendering on "retina" (like) screens
* FIXED: Multiple issues with the PDF export on Win7 (#374, #396, #431)
* FIXED: Save medias on Windows UNC drives (#682)
* FIXED: Wrong file size in kiwix-serve home page
* FIXED: Deal with multi-arch compilation architectures
* FIXED: kiwix-serve crash if unattended search "start" & "end" values
* FIXED: "yes" and "cancel" buttons translations in confirm dialogs
* FIXED: Unstable library fulltext search 
* NEW: Allow to save videos and sounds
* NEW: Add a "random article" button to kiwix-serve
* NEW: New supported user interface languages: Chuvash (cv), Fiji
  Hindi Latin script (hif-latn), Mongolian (mn), Newari (new),
  Sanskrit (sa), Uzbek (uz), Turkish (tr), Tagalog (tl), Talysh