@@ -13,6 +13,7 @@ Kiwix 0.9
 * FIXED: kiwix-serve welcome page Doctype HTML line fix (for Opera)
 * FIXED: Small display issue with multilingual ZIM file
 * FIXED: Toolbar buttons order
+* FIXED: pause/resume refreshing problem in library
 * FIXED: Argument forwarding in kiwix-launcher
 * FIXED: Copy to clipboard if inverted colors (#414)
 * FIXED: "Select all" with inverted colors
